--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ scikit-learn>=1.0.0
 xgboost>=1.5.0
 transformers>=4.18.0
 torch>=1.10.0
-PyPDF2>=2.0.0
+PyPDF>=5.0.0
 python-docx>=0.8.11
 html2text>=2020.1.16
 Pillow>=9.0.0
